--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=X9C103S
-version=1.1.1
+version=1.2.0
 author=Johan Thomas JIji
 maintainer=johanthomasjiji@gmail.com
 sentence=A light library to control X9C103S digital potentiometers.
-paragraph=This is a library that controls X9C103S digital potentiometers. While using this library to control a potentiometer, the pot should not be controled by any other means. Tjis is because the library keeps a tab of the resistance and changing the resistance without the knowledge of the library can result in the setResistance method setting wrong resistance values.
+paragraph=This is a library that controls X9C103S digital potentiometers. While using this library to control a potentiometer, the pot should not be controled by any other means. This is because the library keeps a tab of the resistance and changing the resistance without the knowledge of the library can result in the setResistance method setting wrong resistance values.
 category=Device Control
 url=https://github.com/Hedrahexon/X9C103S
 architectures=*
